--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://markfussell.github.com
-title: Foo
-subtitle: Bar
+title: Polyglot
+subtitle: Wants a cracker
 author: Mark Fussell
 simple_search: http://google.com/search
 description:
