--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://markfussell.emenar.com
 title: Polyglot
-subtitle: Wants a cracker
+subtitle: Build Valuable Systems, Better and Faster
 author: Mark Fussell
 simple_search: http://google.com/search
 description:
@@ -27,7 +27,8 @@ email:
 
 # If publishing to a subdirectory as in http://site.com/project set 'root: /project'
 root: /
-permalink: /blog/:year/:month/:day/:title/
+#permalink: /blog/:year/:month/:day/:title/
+permalink: /blog/:title/
 source: source
 destination: public
 plugins: plugins
